--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ image: ruby
 pages:
   stage: build
   environment:
-    name: review/$CI_BUILD_REF_NAME
-    url: http://$CI_BUILD_REF_NAME.andrewbanchich.gitlab.io/editorial-jekyll-theme
+    name: #review/$CI_BUILD_REF_NAME
+    url: #http://$CI_BUILD_REF_NAME.andrewbanchich.gitlab.io/editorial-jekyll-theme
   script:
   - gem install jekyll
   - jekyll build -d public
