--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Alexandre Carvalho
 subtitle: Homepage
 tagline: Astrophysics. AGN. Interferometry. I am an incoming PhD Student at ICRAR/UWA Perth.
-email: soumyadeep.das.phy14@iitbhu.ac.in
+email: af.carvalho@live.com
 description: Astrophysics. AGN. Interferometry. I am an incoming PhD Student at ICRAR/UWA Perth. I am interested in multiwavelength AGN research, studies of evolutionary path of radio galaxies, AGN restart, and the role of the host environment on AGN life-cycle. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://alex4impact.github.io" # the base hostname & protocol for your site
